--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
     <mat-nav-list>
       <a mat-list-item href="#"><i class="material-icons">bookmark</i> Twój Bookshelf</a>
       <a mat-list-item href="#"><i class="material-icons">search</i> Szukaj książek</a>
-      <a mat-list-item href="#">Wyloguj</a>
+      <a mat-list-item href="/logout">Wyloguj</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -22,6 +22,6 @@
       </button>
       <span><i class="material-icons">library_books</i> Google Books</span>
     </mat-toolbar>
-    <app-books-result></app-books-result>
+    <app-login></app-login>
   </mat-sidenav-content>
 </mat-sidenav-container>
