--- a/src/app/books-result/books-result.component.html
+++ b/src/app/books-result/books-result.component.html
@@ -1,15 +1,22 @@
-<div class="mat-elevation-z8">
-  <table mat-table class="full-width-table" matSort aria-label="Elements">
-    <!-- Id Column -->
+<h1><app-search-bar (books)="getBooks($event)"></app-search-bar></h1>
+
+<div class="mat-elevation-z8" *ngIf="dataSource != undefined">
+
+  <table mat-table class="full-width-table" matSort aria-label="Elements" [dataSource]="dataSource" >
+
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
       <td mat-cell *matCellDef="let row">{{row.id}}</td>
     </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let row">{{row.name}}</td>
+    <ng-container matColumnDef="photo">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>photo</th>
+      <td mat-cell *matCellDef="let row"><img height="100px" src='{{row.volumeInfo.imageLinks.smallThumbnail}}'></td>
+    </ng-container>
+
+    <ng-container matColumnDef="volumeInfo">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>volumeInfo</th>
+      <td mat-cell *matCellDef="let row">{{row.volumeInfo.title}}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -17,9 +24,9 @@
   </table>
 
   <mat-paginator #paginator
-      [length]="dataSource?.data.length"
-      [pageIndex]="0"
-      [pageSize]="50"
-      [pageSizeOptions]="[25, 50, 100, 250]">
+                 [length]="dataSource?.data.length"
+                 [pageIndex]="0"
+                 [pageSize]="50"
+                 [pageSizeOptions]="[2, 50, 100, 250]">
   </mat-paginator>
 </div>
