--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <button *ngIf='!isLoggedIn()' (click)="signIn()">sign in</button>
 
 <div *ngIf='isLoggedIn()'>
-    dddddddd
+    zalogowano
 </div>
