--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,10 +4,13 @@
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item href="#"><i class="material-icons">bookmark</i> Twój Bookshelf</a>
-      <a mat-list-item href="#"><i class="material-icons">search</i> Szukaj książek</a>
-      <a mat-list-item href="/logout">Wyloguj</a>
+    <mat-nav-list *ngIf="isLoggedIn()">
+      <a mat-list-item routerLink="/card-books-result"><i class="material-icons">bookmark</i> Twój Bookshelf</a>
+      <a mat-list-item routerLink="/books-result"><i class="material-icons">search</i> Szukaj książek</a>
+      <a mat-list-item routerLink="/logout">Wyloguj</a>
+    </mat-nav-list>
+    <mat-nav-list *ngIf="!isLoggedIn()">
+      <a mat-list-item routerLink="/login">Zaloguj</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -22,6 +25,6 @@
       </button>
       <span><i class="material-icons">library_books</i> Google Books</span>
     </mat-toolbar>
-    <app-login></app-login>
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
