--- a/src/app/material-navbar/material-navbar.component.html
+++ b/src/app/material-navbar/material-navbar.component.html
@@ -20,7 +20,7 @@
         </div>
       </mdc-top-app-bar-section>
       <mdc-top-app-bar-section align="end" *ngIf="!isLoggedIn()">
-        <button style="color:white;" mdc-button (click)="signIn()">
+        <button class="button-navbar" mdc-button (click)="signIn()">
           <mdc-icon>person</mdc-icon>Zaloguj się
         </button>
       </mdc-top-app-bar-section>
