--- a/src/app/material-card-list/material-card-list.component.html
+++ b/src/app/material-card-list/material-card-list.component.html
@@ -1,4 +1,4 @@
-<app-search-bar (books)="getBooks($event)"></app-search-bar>
+<app-search-bar (books)="startIndex = 0; getBooks($event)"></app-search-bar>
 <div *ngIf="booksData != undefined">
 <mdc-card class="demo-card demo-card--music" *ngFor="let card of booksData.items">
   <mdc-card-primary-action>
@@ -7,36 +7,30 @@
 
       <div class="demo-card__music-info">
         <div class="demo-card__music-title" mdcHeadline7>{{card.volumeInfo.title}}</div>
-        <div *ngIf="card.volumeInfo.authors" class="demo-card__music-artist" mdcBody2>{{card.volumeInfo.authors[0]}}</div>
-        <div *ngIf="card.volumeInfo.publishedDate" class="demo-card__music-year" mdcBody2>{{card.volumeInfo.publishedDate}}</div>
+        <div *ngIf="card.volumeInfo.authors" class="demo-card__music-artist" mdcBody2 >Autor: {{card.volumeInfo.authors[0]}}</div>
+        <div *ngIf="card.volumeInfo.publishedDate" class="demo-card__music-year" mdcBody2>Data wydania: {{card.volumeInfo.publishedDate}}</div>
       </div>
     </div>
   </mdc-card-primary-action>
   <mdc-list-divider></mdc-list-divider>
   <mdc-card-actions>
-    <mdc-card-action-buttons class="demo-card__action-buttons--text-only">Rate album</mdc-card-action-buttons>
+    <mdc-card-action-buttons>
+      <button mdc-button mdcCardAction="button"  [routerLink]="['/single-book-details', card.id]" [state]="{hello:'world'}">Szczegóły</button>
+      <a href="{{card.volumeInfo.previewLink}}"><button *ngIf="card.volumeInfo.previewLink" mdc-button mdcCardAction="button">Podgląd</button></a>
+    </mdc-card-action-buttons>
     <mdc-card-action-icons>
       <button mdcIconButton mdcCardAction="icon">
-        <mdc-icon mdcIconOn>star</mdc-icon>
-        <mdc-icon>star_border</mdc-icon>
+        <mdc-icon mdcIconOn>favorite</mdc-icon>
+        <mdc-icon>favorite_border</mdc-icon>
       </button>
-      <button mdcIconButton mdcCardAction="icon">
-        <mdc-icon mdcIconOn>star</mdc-icon>
-        <mdc-icon>star_border</mdc-icon>
-      </button>
-      <button mdcIconButton mdcCardAction="icon">
-        <mdc-icon mdcIconOn>star</mdc-icon>
-        <mdc-icon>star_border</mdc-icon>
-      </button>
-      <button mdcIconButton mdcCardAction="icon">
-        <mdc-icon mdcIconOn>star</mdc-icon>
-        <mdc-icon>star_border</mdc-icon>
-      </button>
-      <button mdcIconButton mdcCardAction="icon">
-        <mdc-icon mdcIconOn>star</mdc-icon>
-        <mdc-icon>star_border</mdc-icon>
-      </button>
+      <button mdcIconButton mdcCardAction="icon" icon="share"></button>
+      <button mdcIconButton mdcCardAction="icon" icon="more_vert"></button>
     </mdc-card-action-icons>
   </mdc-card-actions>
 </mdc-card>
 </div>
+<div style="clear:both;">
+  <button *ngIf="booksData != undefined" (click)="startIndex = startIndex - 12; getTwelveBooks()">PREV</button>
+  <button *ngIf="booksData != undefined" (click)="startIndex = startIndex + 12; getTwelveBooks()">NEXT</button>
+</div>
+
