--- a/src/app/material-card-list/material-card-list.component.html
+++ b/src/app/material-card-list/material-card-list.component.html
@@ -1,33 +1,6 @@
 <app-search-bar (books)="startIndex = 0; getBooks($event)"></app-search-bar>
 <div *ngIf="booksData != undefined">
-<mdc-card class="demo-card demo-card--music" *ngFor="let card of booksData.items" [mdcElevation]="3">
-  <mdc-card-primary-action>
-    <div class="demo-card__music-row">
-      <mdc-card-media [ngStyle]="{'background-image': card.volumeInfo.imageLinks ? 'url('+card.volumeInfo.imageLinks.thumbnail+')' : 'url(https://material-components-web.appspot.com/images/1-1.jpg)'}" square class="demo-card__media demo-card__media--music"></mdc-card-media>
-
-      <div class="demo-card__music-info">
-        <div class="demo-card__music-title" mdcHeadline7>{{card.volumeInfo.title}}</div>
-        <div *ngIf="card.volumeInfo.authors" class="demo-card__music-artist" mdcBody2 >Autor: {{card.volumeInfo.authors[0]}}</div>
-        <div *ngIf="card.volumeInfo.publishedDate" class="demo-card__music-year" mdcBody2>Data wydania: {{card.volumeInfo.publishedDate}}</div>
-      </div>
-    </div>
-  </mdc-card-primary-action>
-  <mdc-list-divider></mdc-list-divider>
-  <mdc-card-actions>
-    <mdc-card-action-buttons>
-      <button mdc-button mdcCardAction="button"  [routerLink]="['/single-book-details', card.id]" [state]="{hello:'world'}">Szczegóły</button>
-      <a href="{{card.volumeInfo.previewLink}}"><button *ngIf="card.volumeInfo.previewLink" mdc-button mdcCardAction="button">Podgląd</button></a>
-    </mdc-card-action-buttons>
-    <mdc-card-action-icons>
-      <button mdcIconButton class="icon-button-primary">
-        <mdc-icon mdcIconOn>favorite</mdc-icon>
-        <mdc-icon>favorite_border</mdc-icon>
-      </button>
-      <button mdcIconButton mdcCardAction="icon" icon="share"></button>
-      <button mdcIconButton mdcCardAction="icon" icon="more_vert"></button>
-    </mdc-card-action-icons>
-  </mdc-card-actions>
-</mdc-card>
+  <app-material-card *ngFor="let card of booksData.items" [booksInFavoriteBookshelfIds]="booksInFavoriteBookshelfIds" [card]=card></app-material-card>
 </div>
 <div class="bottom-buttons">
   <button *ngIf="booksData != undefined" mdc-button outlined label="Poprzednie"
