--- a/src/app/search-bar/search-bar.component.scss
+++ b/src/app/search-bar/search-bar.component.scss
@@ -1,8 +1,7 @@
 .search-form {
   margin: 25px 25px 0 25px;
 }
-.search-form__input,
-.search-form__button{
+.search-form__input{
   width: 450px;
 }
 
