--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -9,6 +9,7 @@
     <div class="home-page-content__subtitle">
       <h2>Cezary Piątek</h2>
     </div>
+    <button routerLink="/stepper">stepper ale nie dziala</button>
     <div class="home-page-content__login" *ngIf="!isLoggedIn()">
       <h3>Aby kontynuować kliknij przycisk <mdc-icon>person</mdc-icon> (zaloguj się).</h3>
       <h3></h3>
