--- a/src/app/single-book-details/single-book-details.component.html
+++ b/src/app/single-book-details/single-book-details.component.html
@@ -1,5 +1,5 @@
-<div class="single-book-details" >
-  <div class="single-book-details-content"*ngIf="book">
+<div class="single-book-details">
+  <div class="single-book-details-content" *ngIf="book">
     <div class="single-book-details-title">
       <h1>{{book.volumeInfo.title}}</h1>
     </div>
@@ -7,7 +7,9 @@
       <div class="single-book-details-thumbnail" [mdcElevation]="3">
         <img *ngIf="book.volumeInfo.imageLinks" src='{{book.volumeInfo.imageLinks.thumbnail}}'>
         <img *ngIf="!book.volumeInfo.imageLinks" src="https://material-components-web.appspot.com/images/1-1.jpg">
+
       </div>
+
       <div class="single-book-details-headerbox-text">
         <div class="single-book-details-description" *ngIf="book.volumeInfo.description">
           <h2>Opis:</h2>
@@ -19,50 +21,51 @@
         </div>
       </div>
     </div>
-    <div class="single-book-details-table"[mdcElevation]="3">
+    <app-add-book-to-bookshelf-button [bookId]="bookId"></app-add-book-to-bookshelf-button>
+    <div class="single-book-details-table" [mdcElevation]="3">
       <mdc-data-table>
         <table mdcDataTableTable>
           <tbody mdcDataTableContent>
-            <tr mdcDataTableRow *ngIf="book.volumeInfo.categories">
-              <td mdcDataTableCell >Kategoria:</td>
-              <td mdcDataTableCell>{{book.volumeInfo.categories}}</td>
-            </tr>
-            <tr mdcDataTableRow *ngIf="book.volumeInfo.pageCount">
-              <td mdcDataTableCell>Ilość stron:</td>
-              <td mdcDataTableCell>{{book.volumeInfo.pageCount}}</td>
-            </tr>
-            <tr mdcDataTableRow *ngIf="book.volumeInfo.publisher">
-              <td mdcDataTableCell>Wydawca:</td>
-              <td mdcDataTableCell>{{book.volumeInfo.publisher}}</td>
-            </tr>
-            <tr mdcDataTableRow *ngIf="book.volumeInfo.publishedDate">
-              <td mdcDataTableCell>Data publikacji:</td>
-              <td mdcDataTableCell>{{book.volumeInfo.publishedDate}}</td>
-            </tr>
-            <tr mdcDataTableRow *ngIf="book.volumeInfo.language">
-              <td mdcDataTableCell>Język książki:</td>
-              <td mdcDataTableCell>{{book.volumeInfo.language}}</td>
-            </tr>
-            <tr mdcDataTableRow *ngIf="book.saleInfo.isEbook">
-              <td mdcDataTableCell>Czy to E-book?:</td>
-              <td mdcDataTableCell>{{book.saleInfo.isEbook}}</td>
-            </tr>
-            <tr mdcDataTableRow *ngIf="book.saleInfo.saleability">
-              <td mdcDataTableCell>Czy jest na sprzedaż:</td>
-              <td mdcDataTableCell>{{book.saleInfo.saleability}}</td>
-            </tr>
-            <tr mdcDataTableRow *ngIf="book.saleInfo.retailPrice">
-              <td mdcDataTableCell>Cena detaliczna:</td>
-              <td mdcDataTableCell>{{book.saleInfo.retailPrice.amount}} {{book.saleInfo.retailPrice.currencyCode}}</td>
-            </tr>
-            <tr mdcDataTableRow>
-              <td mdcDataTableCell>Id:</td>
-              <td mdcDataTableCell>{{book.id}}</td>
-            </tr>
-            <tr mdcDataTableRow *ngIf="book.etag">
-              <td mdcDataTableCell>Etag:</td>
-              <td mdcDataTableCell>{{book.etag}}</td>
-            </tr>
+          <tr mdcDataTableRow *ngIf="book.volumeInfo.categories">
+            <td mdcDataTableCell>Kategoria:</td>
+            <td mdcDataTableCell>{{book.volumeInfo.categories}}</td>
+          </tr>
+          <tr mdcDataTableRow *ngIf="book.volumeInfo.pageCount">
+            <td mdcDataTableCell>Ilość stron:</td>
+            <td mdcDataTableCell>{{book.volumeInfo.pageCount}}</td>
+          </tr>
+          <tr mdcDataTableRow *ngIf="book.volumeInfo.publisher">
+            <td mdcDataTableCell>Wydawca:</td>
+            <td mdcDataTableCell>{{book.volumeInfo.publisher}}</td>
+          </tr>
+          <tr mdcDataTableRow *ngIf="book.volumeInfo.publishedDate">
+            <td mdcDataTableCell>Data publikacji:</td>
+            <td mdcDataTableCell>{{book.volumeInfo.publishedDate}}</td>
+          </tr>
+          <tr mdcDataTableRow *ngIf="book.volumeInfo.language">
+            <td mdcDataTableCell>Język książki:</td>
+            <td mdcDataTableCell>{{book.volumeInfo.language}}</td>
+          </tr>
+          <tr mdcDataTableRow *ngIf="book.saleInfo.isEbook">
+            <td mdcDataTableCell>Czy to E-book?:</td>
+            <td mdcDataTableCell>{{book.saleInfo.isEbook}}</td>
+          </tr>
+          <tr mdcDataTableRow *ngIf="book.saleInfo.saleability">
+            <td mdcDataTableCell>Czy jest na sprzedaż:</td>
+            <td mdcDataTableCell>{{book.saleInfo.saleability}}</td>
+          </tr>
+          <tr mdcDataTableRow *ngIf="book.saleInfo.retailPrice">
+            <td mdcDataTableCell>Cena detaliczna:</td>
+            <td mdcDataTableCell>{{book.saleInfo.retailPrice.amount}} {{book.saleInfo.retailPrice.currencyCode}}</td>
+          </tr>
+          <tr mdcDataTableRow>
+            <td mdcDataTableCell>Id:</td>
+            <td mdcDataTableCell>{{book.id}}</td>
+          </tr>
+          <tr mdcDataTableRow *ngIf="book.etag">
+            <td mdcDataTableCell>Etag:</td>
+            <td mdcDataTableCell>{{book.etag}}</td>
+          </tr>
           </tbody>
         </table>
       </mdc-data-table>
