--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 $mdc-theme-primary: #512DA8;
 $mdc-theme-secondary: #673AB7;
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "~@angular-mdc/theme/material";
+html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+[hidden] {
+  display: none !important;
+}
