now its more clearly, refactored almost all files. added more scss

--- a/src/app/advanced-search/advanced-search.component.html
+++ b/src/app/advanced-search/advanced-search.component.html
@@ -3,15 +3,15 @@
     <form [formGroup]="firstFormGroup">
       <ng-template matStepLabel>Krok pierwszy</ng-template>
       <mat-form-field>
-         <input matInput placeholder="Nazwa ksiązki:" formControlName="title" required>
+        <input matInput placeholder="Nazwa ksiązki:" formControlName="title" required>
       </mat-form-field>
       <mat-form-field>
-      <mat-label>Sortuj wg:</mat-label>
-      <mat-select matNativeControl formControlName="orderBy">
-        <mat-option *ngFor="let order of orderBy | keyvalue" [value]="order.key">
-          {{order.value}}
-        </mat-option>
-      </mat-select>
+        <mat-label>Sortuj wg:</mat-label>
+        <mat-select matNativeControl formControlName="orderBy">
+          <mat-option *ngFor="let order of orderBy | keyvalue" [value]="order.key">
+            {{order.value}}
+          </mat-option>
+        </mat-select>
       </mat-form-field>
       <mat-form-field>
         <mat-label>Język ksiązki</mat-label>
@@ -41,7 +41,8 @@
       <mat-form-field>
         <mat-label>Dla kogo:</mat-label>
         <mat-select matNativeControl formControlName="maxAllowedMaturityRating">
-          <mat-option *ngFor="let maxAllowedMaturityRating of maxAllowedMaturityRating | keyvalue" [value]="maxAllowedMaturityRating.key">
+          <mat-option *ngFor="let maxAllowedMaturityRating of maxAllowedMaturityRating | keyvalue"
+                      [value]="maxAllowedMaturityRating.key">
             {{maxAllowedMaturityRating.value}}
           </mat-option>
         </mat-select>
@@ -69,8 +70,8 @@
     </form>
   </mat-step>
   <mat-step>
-    <ng-template matStepLabel>Done</ng-template>
-      Aby wyszukać kliknij "Wyślij", aby wyczyścić komórki kliknij resetuj.
+    <ng-template matStepLabel>Wyszukaj!</ng-template>
+    Aby wyszukać kliknij "Wyślij", aby wyczyścić komórki kliknij resetuj.
     <div>
       <button mat-button matStepperPrevious>Cofnij</button>
       <button mat-button (click)="stepper.reset()">Resetuj</button>
