--- a/src/app/basic-search/basic-search.component.html
+++ b/src/app/basic-search/basic-search.component.html
@@ -1,3 +1,6 @@
-<mdc-text-field  #searchBooks label="Wpisz tytuł książki" outlined required class="search-form__input" [mdcElevation]="3">
+<mdc-text-field #searchBooks label="Wpisz tytuł książki" outlined required class="search-form__input"
+                [mdcElevation]="3">
 </mdc-text-field>
-<button (click)="onSearch(searchBooks.value)"> wyslij</button>
+<button mdcIconButton (click)="search(searchBooks.value)">
+  <mdc-icon>search</mdc-icon>
+</button>
