--- a/src/app/material-navbar/material-navbar.component.html
+++ b/src/app/material-navbar/material-navbar.component.html
@@ -1,5 +1,5 @@
 <div class="demo-content">
-  <mdc-top-app-bar [scrollTarget]="fixedContent"  class="mdc-top-app-bar mdc-top-app-bar--fixed">
+  <mdc-top-app-bar [scrollTarget]="fixedContent" class="mdc-top-app-bar mdc-top-app-bar--fixed">
     <mdc-top-app-bar-row>
       <mdc-top-app-bar-section align="start" title="Google Books Overlay">
         <button mdcTopAppBarNavIcon (click)="drawer.open = !drawer.open">
@@ -7,13 +7,10 @@
         </button>
       </mdc-top-app-bar-section>
       <mdc-top-app-bar-section align="end" *ngIf="isLoggedIn()">
-        <mdc-icon mdcTopAppBarActionItem [routerLink]="['/material-card-list']">search</mdc-icon>
         <mdc-icon mdcTopAppBarActionItem (click)="profileMenu.open = !profileMenu.open">more_vert</mdc-icon>
         <div mdcMenuSurfaceAnchor #menuAnchor>
           <mdc-menu #profileMenu [anchorElement]="menuAnchor">
             <mdc-list>
-              <mdc-list-item>Mój profil</mdc-list-item>
-              <mdc-list-divider></mdc-list-divider>
               <mdc-list-item (click)="logOut()">Wyloguj</mdc-list-item>
             </mdc-list>
           </mdc-menu>
@@ -27,18 +24,19 @@
 
   <div class="mdc-top-app-bar--fixed-adjust mdc-drawer-app-content" mdcTopAppBarFixedAdjust #fixedContent>
     <mdc-drawer #drawer fixed drawer="dismissible">
-      <mdc-drawer-header *ngIf="isLoggedIn()" title="{{username}}" subtitle="{{email}}"></mdc-drawer-header >
-      <mdc-drawer-header *ngIf="!isLoggedIn()" title="Zaloguj się" subtitle="aby kontynuować"></mdc-drawer-header >
+      <mdc-drawer-header *ngIf="isLoggedIn()" title="{{username}}" subtitle="{{email}}"></mdc-drawer-header>
+      <mdc-drawer-header *ngIf="!isLoggedIn()" title="Zaloguj się" subtitle="aby kontynuować"></mdc-drawer-header>
       <mdc-drawer-content>
-        <mdc-list *ngIf="isLoggedIn()">
+        <mdc-list>
           <mdc-list-item *ngFor="let item of destinations" [activated]="item.activated" routerLink="/{{item.route}}">
-            <mdc-icon mdcListItemGraphic *ngIf="item.icon">{{item.icon}}</mdc-icon>{{item.label}}
+            <mdc-icon mdcListItemGraphic *ngIf="item.icon">{{item.icon}}</mdc-icon>
+            {{item.label}}
           </mdc-list-item>
         </mdc-list>
       </mdc-drawer-content>
     </mdc-drawer>
 
-    <div mdcDrawerAppContent style="padding: 16px;" >
+    <div mdcDrawerAppContent style="padding: 16px;">
       <router-outlet></router-outlet>
     </div>
   </div>
