--- a/src/app/material-navbar/material-navbar.component.html
+++ b/src/app/material-navbar/material-navbar.component.html
@@ -1,4 +1,4 @@
-<div class="demo-content">
+<div class="navbar">
   <mdc-top-app-bar [scrollTarget]="fixedContent" class="mdc-top-app-bar mdc-top-app-bar--fixed">
     <mdc-top-app-bar-row>
       <mdc-top-app-bar-section align="start" title="Google Books Overlay">
