--- a/src/app/search-bar/search-bar.component.scss
+++ b/src/app/search-bar/search-bar.component.scss
@@ -1,8 +1,8 @@
 .search-bar__buttons {
   text-align: center;
-}
-.search-bar__buttons button {
-  margin: 15px;
+    button {
+      margin: 15px;
+    }
 }
 .search-bar__search-inputs {
   margin: 15px;
