--- a/src/app/search-for-books-single-card/search-for-books-single-card.component.html
+++ b/src/app/search-for-books-single-card/search-for-books-single-card.component.html
@@ -1,4 +1,4 @@
-<mdc-card class="material-card material-card--book" [mdcElevation]="3">
+<mdc-card class="material-card material-card__book" [mdcElevation]="3">
   <mdc-card-primary-action>
     <div class="material-card__book-row" [routerLink]="['/single-book-details', card.id]">
       <mdc-card-media
