--- a/src/app/bookshelf-card-list/bookshelf-card-list.component.scss
+++ b/src/app/bookshelf-card-list/bookshelf-card-list.component.scss
@@ -1,15 +1,6 @@
 @import "~@angular-mdc/theme/material";
 @import "~@angular-mdc/theme/material-components-web";
-
+@import "../../styles";
 .demo-list--custom {
-  @include mdc-list-item-graphic-ink-color(white);
-  @include mdc-list-item-graphic-fill-color(text-icon-on-background);
-
-  @include mdc-list-divider-color($material-color-purple-50);
-
-  @include mdc-list-item-primary-text-ink-color($material-color-blue-600);
-  @include mdc-list-item-secondary-text-ink-color($material-color-purple-600);
-  @include mdc-list-item-graphic-fill-color($material-color-purple-400);
-  @include mdc-list-item-graphic-ink-color($material-color-purple-50);
-  @include mdc-list-item-meta-ink-color($material-color-red-500);
+  @include list;
 }
