--- a/src/app/bookshelf-list/bookshelf-list.component.scss
+++ b/src/app/bookshelf-list/bookshelf-list.component.scss
@@ -1,17 +1,8 @@
 @import "~@angular-mdc/theme/material";
 @import "~@angular-mdc/theme/material-components-web";
-
-.demo-list--custom {
-  @include mdc-list-item-graphic-ink-color(white);
-  @include mdc-list-item-graphic-fill-color(text-icon-on-background);
-
-  @include mdc-list-divider-color($material-color-purple-50);
-
-  @include mdc-list-item-primary-text-ink-color($material-color-blue-600);
-  @include mdc-list-item-secondary-text-ink-color($material-color-purple-600);
-  @include mdc-list-item-graphic-fill-color($material-color-purple-400);
-  @include mdc-list-item-graphic-ink-color($material-color-purple-50);
-  @include mdc-list-item-meta-ink-color($material-color-red-500);
+@import "../../styles";
+.bookshelf-list__list {
+  @include list;
 }
 [hidden] {
   display: none !important;
