--- a/src/app/csv/csv.component.html
+++ b/src/app/csv/csv.component.html
@@ -2,22 +2,37 @@
   <div class="csv__title">
     <h2>Import / Eksport CSV</h2>
   </div>
-  <form [formGroup]="formGroup" class="csv" >
-    <mat-form-field>
-      <mat-label>Wybierz półkę</mat-label>
-      <mat-select matNativeControl formControlName="idOfBookshelf" (change)="getItemsFromBookshelf()">
-        <mat-option *ngFor="let allBookshelves of allBookshelves" [value]="allBookshelves.id">
-          {{allBookshelves.title}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-    <button mdcIconButton (click)="showOptions()">
-      <mdc-icon>search</mdc-icon>
+  <div class="csv__form">
+    <form [formGroup]="formGroup" class="csv">
+      <mat-form-field>
+        <mat-label>Wybierz półkę</mat-label>
+        <mat-select matNativeControl formControlName="idOfBookshelf" (change)="getItemsFromBookshelf()">
+          <mat-option *ngFor="let allBookshelves of allBookshelves" [value]="allBookshelves.id">
+            {{allBookshelves.title}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <button mdcIconButton (click)="showOptions()">
+        <mdc-icon>search</mdc-icon>
+      </button>
+    </form>
+  </div>
+  <div class="csv__buttons">
+    <a mdc-button outlined *ngIf="allBookshelves" csvLink [data]="allBookshelves">Wyeksportuj wszystkie bookshelfy</a>
+    <a mdc-button outlined *ngIf="booksFromBookshelf && booksFromBookshelf.items" csvLink
+       [data]="booksFromBookshelf.items">Wyeksportuj wszystkie książki</a>
+    <button mdc-button outlined *ngIf="booksFromBookshelf && booksFromBookshelf.items && booleanForUnwantedBookshelves"
+            (click)="deleteEverythingFromBookshelf(idOfBookshelf)">Usuń wszystkie książki
     </button>
-  </form>
-  <a *ngIf="allBookshelves" csvLink [data]="allBookshelves">Wyeksportuj wszystkie bookshelfy</a>
-  <a *ngIf="booksFromBookshelf && booksFromBookshelf.items" csvLink [data]="booksFromBookshelf.items">Wyeksportuj wszystkie książki</a>
-  <a *ngIf="booksFromBookshelf && booksFromBookshelf.items && booleanForUnwantedBookshelves" (click)="deleteEverythingFromBookshelf(idOfBookshelf)">Usuń wszystkie książki</a>
-  <input type="file" *ngIf="booleanForUnwantedBookshelves" (click)="importCSV(idOfBookshelf)">Importuj książki do Bookshelfu
+    <div class="csv__input-file">
+      <div class="csv__input-file-title" *ngIf="booleanForUnwantedBookshelves">
+        <h3>Importuj plik CSV</h3>
+      </div>
+      <input mdc-button outlined type="file" *ngIf="booleanForUnwantedBookshelves"
+             (change)="fileChangeListener($event.target.files)">
+      <button mdc-button outlined *ngIf="csvData" (click)="importBooksToBookshelf()">Importuj książki do Bookshelfu
+      </button>
+    </div>
+  </div>
 </div>
 
